--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,20 @@
 body {
   height: 100vh;
 }
+/* 
+.type {
+  white-space: nowrap;
+    overflow: hidden;
+    animation: typing 2s steps(13, end), blink-caret 0.5s step-end infinite alternate;
+}
+
+@-webkit-keyframes typing {
+    from {
+        width: 0;
+    }
+}
+@-webkit-keyframes blink-caret {
+    50% {
+        border-color: transparent;
+    }
+} */
