--- a/src/index.css
+++ b/src/index.css
@@ -85,5 +85,4 @@ a .active {
 }
 
 .change {
-  filter: invert(42%) sepia(35%) saturate(2979%) hue-rotate(339deg) brightness(100%) contrast(101%);
-}
+filter: invert(100%) sepia(15%) saturate(1745%) hue-rotate(291deg) brightness(92%) contrast(99%);}
