--- a/src/index.css
+++ b/src/index.css
@@ -94,7 +94,7 @@ filter: invert(100%) sepia(15%) saturate(1745%) hue-rotate(291deg) brightness(92
   background-color: black;
   padding: 5px 10px;
   border-radius: 5px;
-  color: #e9dddd;
+  color: #ffffff;
   outline: none;
 }
 
